Bug 93009 - PRINTING Comments on the side of document not visible in a print due to font color problem (white on white) (regression)
Summary: PRINTING Comments on the side of document not visible in a print due to font ...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
5.0.0.4 rc
Hardware: All All
: high major
Assignee: Miklos Vajna
URL:
Whiteboard: target:5.2.0 target:5.1.0.2 target:5...
Keywords: bibisected, regression
: 93767 93925 94157 94315 95764 96018 97705 (view as bug list)
Depends on:
Blocks:
 
Reported: 2015-07-29 19:59 UTC by peterpan
Modified: 2016-10-25 19:08 UTC (History)
22 users (show)

See Also:
Crash report or crash signature:


Attachments
sample document with comment (16.39 KB, application/vnd.oasis.opendocument.text)
2015-07-29 19:59 UTC, peterpan
Details
No side note (137.14 KB, image/png)
2015-08-11 22:24 UTC, NebToulouse
Details
A screen print where the text of a note is highlighted. (7.88 KB, image/png)
2015-09-14 06:45 UTC, vatairethibault
Details

Note You need to log in before you can comment on or make changes to this bug.
Description peterpan 2015-07-29 19:59:41 UTC
Created attachment 117522 [details]
sample document with comment

When document with revisions and comments is printed, I usually set to print comments on the right side of document in printer window. Revisions are printed fine, but comments are not printed. Only the line connecting comment bubble to the place in text shows up. EOP and EOD options work fine.
Comment 1 Martin Srebotnjak 2015-07-29 21:59:03 UTC
I can confirm that on OSX LO50RC4.

Printing to PDF from Print window after enabling printing of comments in the right border creates a PDF without a comment, just with the line pointing to the comment.

However if same document gets exported as PDF and comments are enabled for export, the finished PDF includes the comment.

This should be quite a serious error, I guess, for a 5.0 release.
Comment 2 NebToulouse 2015-08-11 22:16:47 UTC
I have the same problem on my Linux box. Problem started at or just before 5.0.0.4 and now continuing. I still have it on 5.0.1.1 RC.
Moreover, exporting as PDF does not solve the issue for me.
Comment 3 NebToulouse 2015-08-11 22:24:44 UTC
Created attachment 117847 [details]
No side note
Comment 4 Peter 2015-08-25 11:19:21 UTC
Changing architecture (affects x86 32bit too). Also changing the subject in order to reflect the fact that the issue is regression; it worked well with version 4.4
Comment 5 vatairethibault 2015-09-14 06:45:02 UTC
Created attachment 118689 [details]
A screen print where the text of a note is highlighted.
Comment 6 vatairethibault 2015-09-14 06:48:21 UTC
When the document is printed to a pdf file, notes can be viewed by highlighting the text.
So notes are printed, but they are printed with white text on white background.
(see attachment 118689 [details])
Comment 7 Gerry 2015-09-14 07:05:18 UTC
Is bug 93925 a duplicate of this one? It is about lost comments in PDF export, but maybe this refers to the same cause?
Comment 8 Gerry 2015-09-17 09:11:13 UTC
Can anyone who is able to Bibisect, look from which commit this regression comes from? Thanks a lot!
Comment 9 Alex Thurgood 2015-09-18 10:25:29 UTC
*** Bug 94315 has been marked as a duplicate of this bug. ***
Comment 10 Alex Thurgood 2015-09-18 10:33:17 UTC
*** Bug 93767 has been marked as a duplicate of this bug. ***
Comment 11 Buovjaga 2015-09-20 12:23:21 UTC
*** Bug 94157 has been marked as a duplicate of this bug. ***
Comment 12 Orion 2015-09-23 21:31:53 UTC
v5.2 does not fix this bug, and you can no longer highlight text in a note, so there is no workaround.
Comment 13 raal 2015-10-02 08:30:41 UTC
Works OK in oldest, latest range in bibisect-win32-5.0, latest:Version: 5.0.0.0.alpha1+
Build ID: ab465b90f6c6da5595393a0ba73f33a1e71a2b65
Comment 14 raal 2015-11-12 13:30:07 UTC
 a517fec6f749fa4d5a8e1688bfb776a616e16b14 is the first bad commit
commit a517fec6f749fa4d5a8e1688bfb776a616e16b14
Author: Norbert Thiebaud <nthiebaud@gmail.com>
Date:   Sat Jul 25 15:46:10 2015 -0700

    source a6f5770b4aaaa6506a22eae0d641ad48f9b6d239

    source a6f5770b4aaaa6506a22eae0d641ad48f9b6d239
    source 5bc343cc723f993ed112cf5c700e3f397527d671
    source c6483666232a231446190d5c256857db45c5e4cc
    source bded4ddd6da0de2c465b28a51d773720338542c3
    source 79429448052d4b69cc235000b74f3f8d6fa5a74c
    source 7e74fe416de8f2da49d7fd2eb13759cde76e9c6c
    source cd0474555eed3e65c145c85ed21baab8f09258d2
    source a843c457044acc3155b0d3c49534e78569c69d96
    source cfde943f59b0cf63c46cbe061fd37e53201d2363
    source cade2b8f9f9c39fc7bc6960f5faf591860be58ae
    source 6556043364877c0ac74c07b509856dccfe52e43a
    source 4cf3dd78870456f786d39e8946648550a655d9a3
    source 978033d5ed9f93f2d5d9a1ba44acf6b37bc13bfe
    source b5a4e6974a5473c44fc239b6a9ae21f233111c2a
    source f1256611054701a2bba20225fb654814eecbf559
    source 3b32c5898ff4e744d3f18b00421b433500426d74

	
	bibisect-win32-5.1
$ git bisect log
# bad: [7af0dacdc70e7e8bd0785ab0be6e6ca64b64d08d] source 8bde421ccec9c10fe1382ad68485852889dd4c74
# good: [c1efd324c6ad448ac9edb030dc9738b9e6899e4d] source ab465b90f6c6da5595393a0ba73f33a1e71a2b65
git bisect start '7af0dacdc70e7e8bd0785ab0be6e6ca64b64d08d' 'c1efd324c6ad448ac9edb030dc9738b9e6899e4d'
# bad: [3f6a85ce123f4e0c065f1c28b02f66dc7734cc04] source 647b5aecd4c3facc302df33386451dda732aab98
git bisect bad 3f6a85ce123f4e0c065f1c28b02f66dc7734cc04
# good: [c1575e5261af5b8dbdf5740a9bc4e6c7a1ba74d8] source cfbbb3ca5d0d7bc479e219e17aa2919196664118
git bisect good c1575e5261af5b8dbdf5740a9bc4e6c7a1ba74d8
# bad: [db6594849c23b0cbdb542f14457610df1e580f11] source 92f32585708a251526492f1eb576744bee8d5a5f
git bisect bad db6594849c23b0cbdb542f14457610df1e580f11
# bad: [84744088e5b698f0c4697a5cf460370406653074] source 36a77b748a0b1d35ce72b2e14d1daa158d5f7c4b
git bisect bad 84744088e5b698f0c4697a5cf460370406653074
# good: [527f18a00b8b4de6eccfc62107aea57160444f97] source 9ee481cce4f26cbde09efa46bc0b2c52e53eb2bf
git bisect good 527f18a00b8b4de6eccfc62107aea57160444f97
# good: [9be9f846b72cd95c9e7db90388a8bd9b5be489ac] source f8db2d7533785b89a149e7879d7a3c1909d41e6b
git bisect good 9be9f846b72cd95c9e7db90388a8bd9b5be489ac
# bad: [27fa96ae8b8d0fcc8f36fce3a56a08ab30bbec57] source a3f8a1c1df3e57b541e76156179f81972e845814
git bisect bad 27fa96ae8b8d0fcc8f36fce3a56a08ab30bbec57
# bad: [b04c3097da2e1fc12bf57df20023f86abac698d6] source b010e4074e5d5ee3a3905f1351f04efafe937c2a
git bisect bad b04c3097da2e1fc12bf57df20023f86abac698d6
# good: [18205443b4b43f92922187f1e8138e9000205a9f] source 420923ba76ad84892fd242ed37be9d85e1ea03fe
git bisect good 18205443b4b43f92922187f1e8138e9000205a9f
# good: [a5eb454d16b9a2b0471623da6cd0ac1debf9d3c2] source 025952f52767fb3508a6725468fe4b1e6ce4c9b1
git bisect good a5eb454d16b9a2b0471623da6cd0ac1debf9d3c2
# bad: [ab770a10e6a0d10b2865619f10fd56a7b7517736] source abbe4f9d64073d77c4be93b7c89c03d0651bacef
git bisect bad ab770a10e6a0d10b2865619f10fd56a7b7517736
# bad: [4f0e76e7933234a71f3880b1bab02c5af6e1cfe2] source 2a583603dec40090289ddb5b4b70d800794cf57b
git bisect bad 4f0e76e7933234a71f3880b1bab02c5af6e1cfe2
# bad: [a517fec6f749fa4d5a8e1688bfb776a616e16b14] source a6f5770b4aaaa6506a22eae0d641ad48f9b6d239
git bisect bad a517fec6f749fa4d5a8e1688bfb776a616e16b14
# first bad commit: [a517fec6f749fa4d5a8e1688bfb776a616e16b14] source a6f5770b4aaaa6506a22eae0d641ad48f9b6d239
Comment 15 raal 2015-11-12 16:50:15 UTC
*** Bug 95764 has been marked as a duplicate of this bug. ***
Comment 16 Miklos Vajna 2015-11-19 13:47:46 UTC
Removing bisected keyword: please mark bugs as bisected only in case it's bisected down to a single commit. As long as we have a range only, that's bibisected only.
Comment 17 raal 2015-11-23 21:30:54 UTC
*** Bug 96018 has been marked as a duplicate of this bug. ***
Comment 18 Robinson Tryon (qubit) 2015-12-13 11:13:12 UTC Comment hidden (obsolete)
Comment 19 Miklos Vajna 2015-12-18 14:33:02 UTC
I'll take care of this, most probably a regression from my 978033d5ed9f93f2d5d9a1ba44acf6b37bc13bfe.
Comment 20 Commit Notification 2015-12-22 08:10:08 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=d6913850585eae90ea9179129fe7b60a2a4305ad

tdf#93009 SwViewShell: fix printing of comments on the margin

It will be available in 5.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 21 Yan Pas 2015-12-22 10:34:18 UTC
Push it to 5.0.5 and 5.1.0 too, please.
Comment 22 Commit Notification 2015-12-23 16:16:56 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-5-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=2b8d5a2d5182ee90568173e702f531a2b9279ef9&h=libreoffice-5-1

tdf#93009 SwViewShell: fix printing of comments on the margin

It will be available in 5.1.0.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 23 Commit Notification 2015-12-23 16:17:05 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-5-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=be005a7a4ec5934372d4b13b96b22d2c8659ed95&h=libreoffice-5-0

tdf#93009 SwViewShell: fix printing of comments on the margin

It will be available in 5.0.5.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 24 Cor Nouws 2015-12-27 21:35:47 UTC
OK in 5.2.0 daily from 2015-12-27
and 5.1.0.1 daily from 2015-12-26

Thanks Miklos!
Comment 25 raal 2016-02-10 15:40:48 UTC
*** Bug 97705 has been marked as a duplicate of this bug. ***
Comment 26 Michael Stahl 2016-02-22 21:27:10 UTC
*** Bug 93925 has been marked as a duplicate of this bug. ***