tdf#93009 SwViewShell: fix printing of comments on the margin

Clipping was set not only in case of VCL-level double buffering, but
also during printing, which means comments were excluded from the
output.

(cherry picked from commit d6913850585eae90ea9179129fe7b60a2a4305ad)

Change-Id: Iffb7d91ca78c09e2b43133f5049d52bd7dc4e730
Reviewed-on: https://gerrit.libreoffice.org/20872
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>
(cherry picked from commit be005a7a4ec5934372d4b13b96b22d2c8659ed95)